# AzureCNCalcRefine

./: .gitignore  CLAUDE.md  README.md  data-modeling.md  implement-plan.md  main.py  mvp-plan.md  pyproject.toml
admin/: index.html
admin/css/: admin.css
admin/js/: api.js  app.js
alembic/: env.py
alembic/versions/: 0001_config_management_tables.py
app/: database.py  main.py
app/api/: admin.py  explore.py  products.py
app/config/: product_catalog.json
app/models/: __init__.py  config.py
app/schemas/: admin.py  configuration.py  explore.py
app/services/: catalog_cache.py  (+4 more)
data/: acn_price_validation.json  acn_product_names.json  slug_to_service_name.json
docs/: explore-global-api-manual.md  product-config-guide.md
frontend/: index.html
plan/: MVP-implementation-tasks.md  MVP-plan.md  acn-datamodel-onboarding-plan.md  estimate-area-implement-plan.md  onboarding-mvp-realign-plan.md
prod-config/: calculatorconst.js  calculatorconst.json  calculatordatamodel.js  calculatordatamodel.json  duplicate_slugs.json
research/: acn-datamodel-analysis.md  acn-datamodel-migration-plan.md  acn-datamodel-todo.md  acn-datamodel.md  adding-new-product-guide.md  explore-global-api-manual.md  frontend-page-structure.md  per-pattern-json-config-design.md  product-config-schema-validation.md  product-pricing-patterns.md  vm-calculator-api-mapping.md
scripts/: apply_cn_names.py  convert_acn_datamodel.js  explore_global_api.py  extract_acn_metadata.py  generate_service_configs.py  import_configs_to_db.py  price_drift_report.py
tests/: test_vm_parser.py
(+299 files in other folders)
