[project]
name = "azurecncalcrefine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.135.1",
    "openai>=2.24.0",
    "pandas>=3.0.1",
    "requests>=2.32.5",
    "sqlalchemy[asyncio]>=2.0.48",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "rich>=14.3.3",
]
